fix: background z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,3 +10,7 @@ body {
 	color: var(--color-text);
 	background-color: var(--color-bg);
 }
+
+main {
+	isolation: isolate;
+}
